@@ -22,6 +22,7 @@
 				debug="on"
 				optimize="off">
 			<classpath>
+				<pathelement location="lib/exedio-cope-util.jar" />
 				<pathelement location="lib/servlet-api.jar" />
 			</classpath>
 			<compilerarg value="-Xlint:all" />
@@ -62,6 +63,7 @@
 				optimize="off">
 			<classpath>
 				<pathelement location="${classes.dir}" />
+				<pathelement location="lib/exedio-cope-util.jar" />
 				<pathelement location="lib/servlet-api.jar" />
 			</classpath>
 			<compilerarg value="-Xlint:all" />
@@ -74,6 +76,9 @@
 		<copy todir="build/web/WEB-INF/classes">
 			<fileset dir="${classes.dir}" />
 			<fileset dir="build/exampleclasses" />
+		</copy>
+		<copy todir="build/web/WEB-INF/lib">
+			<fileset file="lib/exedio-cope-util.jar" />
 		</copy>
 		<copy todir="build/web/WEB-INF" file="conf/web.xml" />
 	</target>
