@@ -6,3 +6,4 @@
 
 servlet-api = 2.4
 
+exedio-cope-util = 20090213113826
