@@ -7,3 +7,4 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Interrupter from exedio-cope-util.jar is used
